# baker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bake-kas/: Cargo.toml  build.rs
bake-kas/scripts/: kas_checkout.py  kas_exec.py  kas_version.py
bake-kas/src/: kas.rs  lib.rs
bake-kas/src/kas/: config.rs  context.rs
bake-kas/src/kas/config/: project.rs
bake-kas/tests/: it_kas_checkout.rs
cmd/bake-kas/: Cargo.toml
cmd/bake-kas/scripts/: kas_checkout.py
cmd/bake-kas/src/: lib.rs
cmd/bake-kas/src/kas/: config.rs
cmd/bake-kas/src/kas/config/: project.rs
cmd/bake-kas/tests/: it_kas_checkout.rs  it_kas_load_proj_config.rs  testlib.rs
core-vcs/: Cargo.toml
