[package]
name = "bake-kas"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.0"

[dependencies]
anyhow = "1.0.75"
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
serde_yaml = "0.9.25"
tracing = "0.1.37"

[dev-dependencies]
assert_matches = "1.5.0"
